some bug fixes, collapsable network editor, delete node from node detail view

--- a/src/app/components/info-tile/info-tile.component.scss
+++ b/src/app/components/info-tile/info-tile.component.scss
@@ -1,3 +1,13 @@
 .link-icon-margin { 
     margin: 0 2px;
 }
+
+.toggle-container {
+    display: flex;
+    align-items: center;
+}
+
+.toggle-container app-fa-solid-icon {
+    margin-left: 20%;
+    cursor: pointer;
+}
